# netcdf4excel

./: .gitignore  NetCDF4Excel_2007.xlam  NetCDF4Excel_2007.xlsm  README.md  install_script.nsi
Doc/: Manuel_utilisateur_FR.docx  User_documentation_ENG.docx
VbNc/: CMakeLists.txt  vbnc.def
VbNc/src/: vbnc.cpp  vbnc.h
